--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -92,7 +92,7 @@ body {
     background: rgb(244, 236, 230);
     width: 100%;
     height: 100%;
-    transition: all 300ms;
+    transition: all 350ms;
     opacity: 0;
     &.visible {
       top: 0%;
@@ -105,10 +105,11 @@ body {
       row-gap: 28px;
       margin-top: 132px;
       li {
-        font-size: 14px;
+        padding: 0px;
+        align-items: center;
         a {
           color: black;
-          padding: 8px 8px;
+          padding: 8px;
           font-size: 20px;
           font-family: PoppinsSemibold;
           &:hover,
