--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -169,9 +169,11 @@ body {
         padding-top: 54px !important;
         font-size: 28px !important;
       }
-      .sub-heading {
+      .sub-heading-container {
         margin-top: 54px !important;
-        font-size: 20px !important;
+        .sub-heading {
+          font-size: 20px !important;
+        }
       }
       .card {
         flex-wrap: wrap;
@@ -312,10 +314,15 @@ body {
       font-family: PoppinsSemibold;
       padding-top: 108px;
     }
-    .sub-heading {
-      font-size: 25px;
-      font-family: PoppinsSemibold;
+    .sub-heading-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-top: 108px;
+      .sub-heading {
+        font-size: 25px;
+        font-family: PoppinsSemibold;
+      }
     }
     .card {
       padding: 50px 40px 50px 50px;
@@ -520,26 +527,19 @@ body {
   box-sizing: border-box;
   cursor: pointer;
   color: #000;
-  display: inline-block;
   font-family: AvenirHeavy;
   font-size: 14px;
-  font-weight: 600;
-  line-height: normal;
-  margin: 0;
-  min-height: 35px;
-  min-width: 0;
+  min-width: 130px;
   outline: none;
-  text-align: center;
-  text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 130px;
   will-change: transform;
   border-radius: 100px;
   background-color: transparent;
   border: 1px solid #000;
+  padding: 8px 20px;
 }
 
 .button:hover {
@@ -555,7 +555,7 @@ body {
 }
 
 .blue-button:hover {
-  background-color: #fff;
+  background-color: transparent;
   border-color: var(--primary);
   color: #000;
 }
