fix: updating fonts

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -217,6 +217,7 @@ body {
             margin-top: 20px;
             h2 {
               font-size: 21px;
+              line-height: 25.2px;
             }
           }
           .blue-bar {
