--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -275,6 +275,22 @@ body {
       }
     }
   }
+  .project-container {
+    .main-container {
+      .full-width-container {
+        flex-direction: column;
+        height: auto !important;
+        & > div:first-child {
+          padding: 32px 24px !important;
+          width: 100%;
+        }
+        & > div:nth-child(2n) {
+          height: 260px;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 .footer {
@@ -525,20 +541,56 @@ body {
   background-color: rgb(230, 218, 206);
   .main-container {
     background-color: rgb(230, 218, 206);
-    max-width: var(--screen-width);
-    width: 90%;
-    margin: 0px auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     .slider-container {
-      width: 100%;
+      max-width: var(--screen-width);
+      width: 90%;
       img {
         display: block;
         width: 100%;
         height: auto;
+      }
+    }
+    .full-width-container {
+      width: 100%;
+      display: flex;
+      height: 607px;
+      background-color: #000;
+      color: white;
+      & > div {
+        width: 50%;
+      }
+      & > div:first-child {
+        padding: 60px;
+        text-align: start;
+        align-self: center;
+        font-family: PoppinsSemiBold;
+        display: flex;
+        justify-content: end;
+        box-sizing: border-box;
+        h3 {
+          font-size: 14px;
+          font-weight: 400;
+        }
+        h1 {
+          font-size: 30px;
+          span {
+            color: #fbb01d;
+          }
+        }
+      }
+      & > div:nth-child(2n) {
+        background-color: red;
+        background: no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -ms-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
       }
     }
     .coming-up-container {
